typescript/checker/tests/conformance/es6/computedProperties/computedPropertyNames9_ES6.ts.stderr
error: unimplemented
expand_export_info(T)
File: $DIR/tests/conformance/es6/computedProperties/computedPropertyNames9_ES6.ts
 --> $DIR/tests/conformance/es6/computedProperties/computedPropertyNames9_ES6.ts:4:1
  |
4 | function f<T>(x: T): T;
  | ^^^^^^^^^^^^^^^^^^^^^^^

